# Agent-R

./: .gitignore  1.py  2.py  3.py  Notice.txt  README.md  eval.py  map_fn.py  mcts_collection.py  path_collection.py  requirements.txt  test_env.py
AgentGym/.github/workflows/: codeql.yml
AgentGym/agentenv-roomgrasp/: pyproject.toml  roomgrasp_generate_datasets.py  test_roomgrasp_env.py
AgentGym/agentenv-roomgrasp/agentenv_roomgrasp/: __init__.py  env_wrapper.py  environment.py  grasp_tree.py  launch.py  model.py  room_tree.py  server.py  utils.py
AgentGym/agentenv-roomgrasp/agentenv_roomgrasp/data/rooms/: bathroom.json  bedroom.json  kitchen.json  living_room.json  study_room.json
AgentGym/agentenv-sciworld/agentenv_sciworld/: environment.py  server.py
AgentGym/agentenv/agentenv/envs/: __init__.py  roomgrasp.py  sciworld.py
mcts_utils/: llm_server.py  mcts_raw.py
mcts_utils/roomgrasp/: mcts_rg.py  roomgrasp_test.json  roomgrasp_train_clean.json
mcts_utils/sciworld/: data_utils_sw.py  eval_utils_sw.py  mcts_sci.py  sciworld_test.json
mcts_utils/textcraft/: mcts_tc.py  textcraft_test.json  textcraft_train_clean.json
mcts_utils/webshop/: mcts_ws.py  webshop_test.json  webshop_train_clean.json
